--- a/src/components/common.module.css
+++ b/src/components/common.module.css
@@ -27,6 +27,19 @@
   margin: 10px;
 }
 
+.imgContainer {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.imgContainer img {
+  width: 100%;
+}
+
 .desc {
   max-height: 200px;
   overflow: auto;
