chore: submit guide

--- a/src/components/common.module.css
+++ b/src/components/common.module.css
@@ -60,3 +60,18 @@
   max-width: 800px;
   margin: 20px auto;
 }
+
+.thanksContainer {
+  display: flex;
+  height: 200px;
+  align-content: center;
+  align-items: center;
+}
+
+.thanksContainer img {
+  height: 100%;
+}
+
+.thanksTitle {
+  font-size: 30px;
+}
